# teamtalk-telegram-sender

./: .env.example  .gitattributes  .gitignore  README.en.md  Readme.md  SConstruct  admin_action_usages.txt  alembic.ini  all_bot_python_files.txt  babel.cfg  cleanup_comments.py  flake8_unused_report.txt  manage-locales.py  manage_migrations.py  pyproject.toml  python_files.txt  requirements.txt  sender.py  stderr.txt  stdout.txt  test_pytalk_import.py  update_po.py  vulture_dead_code_report.txt
alembic/: env.py
alembic/versions/: 14b748191b19_alter_user_settings_language_to_.py  263c7a192547_convert_language_field_to_enum_names.py  2b8d9f4a1c7e_replace_mute_all_with_mode.py  5edd5f3c3434_create_ban_list_table.py  61f624ff8654_initial_migration.py  8677509804ef_unify_master_to_refactor_schema.py  91f46462bb8e_create_muted_users_table.py
bot/: config.py  constants.py  language.py  localization.py  logging_setup.py  models.py  state.py  state_manager.py
bot/core/: enums.py  languages.py  notifications.py  user_settings.py  utils.py
bot/database/: crud.py  engine.py  models.py
bot/locales/ru/LC_MESSAGES/: messages.po
bot/services/: __init__.py  user_service.py
bot/teamtalk_bot/: bot_instance.py  commands.py  connection.py  event_handler.py  events.py  utils.py
bot/telegram_bot/: bot_instances.py  callback_data.py  commands.py  deeplink.py  filters.py  keyboards.py  middlewares.py  models.py  setup.py  utils.py
bot/telegram_bot/handlers/: __init__.py  admin.py  callbacks.py  menu_callbacks.py  settings.py  unknown.py  user.py
bot/telegram_bot/handlers/callback_handlers/: _helpers.py  admin.py  language.py  list_utils.py  menu_callbacks.py  mute.py  navigation.py  notifications.py  subscriber_actions.py  subscriber_list.py  subscription.py
bot/telegram_bot/middlewares/: __init__.py  admin_check.py  application.py  db_session.py  subscription_check.py  teamtalk_connection.py  user_settings.py  utils.py
bot/tests/: test_crud.py
locales/en/LC_MESSAGES/: messages.po
locales/ru/LC_MESSAGES/: messages.po
locales/uk/LC_MESSAGES/: messages.po
scripts/: manage_locales.py  run_alembic.py
