[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
backend-path = "."

[project]
name = "teamtalk-telegram-sender"
version = "0.1.0"
description = "A bot that bridges TeamTalk 5 server events (user join/leave) to Telegram notifications and forwards PMs."
readme = "README.md"
requires-python = ">=3.11"
license = {text = "GNU General Public License v3.0"}
authors = [
    {name = "kirill-jjj", email = "kirillkolovi@gmail.com"},
]
keywords = ["teamtalk", "telegram", "bot", "notifications", "aiogram", "pytalk"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Framework :: AsyncIO",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Natural Language :: English",
    "Natural Language :: Russian",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Communications :: Chat",
    "Topic :: Internet",
    "Typing :: Typed",
]

dependencies = [
    "aiogram",
    "SQLAlchemy",
    "aiosqlite",
    "py-talk-ex",
    "python-dotenv",
    'uvloop; sys_platform != "win32"'
]

[dependency-groups]
dev = [
    "ruff",
]

[tool.ruff]
line-length = 79
indent-width = 4
preview = true
respect-gitignore = true
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".ipynb_checkpoints",
    ".mypy_cache",
    ".nox",
    ".pdm-build",
    ".pytest_cache",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    "venv",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "site-packages",
    "bot/implementation/",
    "pytalk/implementation/",
    "pytalk/tools/ttsdk_downloader.py",
    "TeamTalk5.py",
]

[tool.ruff.format]
indent-style = "space"
quote-style = "double"
skip-magic-trailing-comma = false

[tool.ruff.lint]
allowed-confusables = ["а", "е", "о", "р"]
select = ["ALL"]
ignore = [
    "D",
    "CPY",
]

[project.urls]
Homepage = "https://github.com/kirill-jjj/teamtalk-telegram-sender"
Repository = "https://github.com/kirill-jjj/teamtalk-telegram-sender"
Issues = "https://github.com/kirill-jjj/teamtalk-telegram-sender/issues"

[tool.setuptools]
packages = ["bot"]