[build-system]
requires = ["setuptools>=80.9.0"]
build-backend = "setuptools.build_meta"
backend-path = "."

[project]
name = "teamtalk-telegram-sender"
version = "0.1.0"
description = "A bot that bridges TeamTalk 5 server events (user join/leave) to Telegram notifications and forwards PMs."
readme = "README.md"
requires-python = ">=3.11"
license = {text = "GNU General Public License v3.0"}
authors = [
    {name = "kirill-jjj", email = "kirillkolovi@gmail.com"},
]
keywords = ["teamtalk", "telegram", "bot", "notifications", "aiogram", "pytalk"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Framework :: AsyncIO",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Natural Language :: English",
    "Natural Language :: Russian",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Communications :: Chat",
    "Topic :: Internet",
    "Typing :: Typed",
]

dependencies = [
    "aiogram~=3.20.0",
    "py-talk-ex~=1.6.0",
    "python-dotenv~=1.1.0",
    "SQLAlchemy~=2.0.41",
    "aiosqlite~=0.21.0",
    'uvloop; sys_platform != "win32"',
    "Babel>=2.15.0",
    "pydantic-settings~=2.11"
]

[project.urls]
Homepage = "https://github.com/kirill-jjj/teamtalk-telegram-sender"
Repository = "https://github.com/kirill-jjj/teamtalk-telegram-sender"
Issues = "https://github.com/kirill-jjj/teamtalk-telegram-sender/issues"

[tool.setuptools]
packages = ["bot"]